Работа над переводом классов из State в Model завершена
 - FlowViewState переведен в FlowViewModel
 - InjConfigurationState переведен в InjConfigurationModel
 - InjectorTypeToggleState переведен в InjectorTypeModel
 - LanguageState переведен в LanguageModel
 - PressureSensorState переведен в PressureSensorModel

Дополнительно:
 - рефакторинг кода
 - убран MalformedURLException при старте приложения